--- a/index.html
+++ b/index.html
@@ -302,13 +302,14 @@
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													The Express Lane to Spam and Centralization: An Empirical Analysis of Arbitrum's Timeboost</h6>
+													The Express Lane to Spam and Centralization: An Empirical Analysis
+													of Arbitrum's Timeboost</h6>
 											</li>
 											<li>
 												<script>document.write(get_authors(["johnnatan_messias", "christof_ferreira_torres"]))</script>
 
 											</li>
-											<li>Pre print.</li>
+											<li>Pre print. 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#arxiv-timeboost"
@@ -361,7 +362,7 @@
 												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
 
 											</li>
-											<li>Pre print.</li>
+											<li>Pre print. 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#arxiv-airdrop"
@@ -421,7 +422,7 @@
 												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
 
 											</li>
-											<li>Pre print.</li>
+											<li>Pre print. 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#arxiv-daos"
