--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:image:width" content="652">
 	<meta property="og:image:height" content="653">
 	<meta name="keywords"
-		content="scientist, science, cientista, wissenschaftler, forscher, researcher, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
+		content="scientist, science, cientista, wissenschaftler, forscher, researcher, pesquisador, doutorado, phd, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
 	<meta name="google-site-verification" content="D1YxGMlR00iEhOLqhWg3pUbWsu7CkpXuxN6o7egxmoc" />
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -231,11 +231,9 @@
 						<p class="mb-0">
 							I am a Research Scientist at the <a href="https://www.mpi-sws.org/">Max Planck Institute for
 								Software Systems (MPI-SWS)</a> and a former Research Scientist at <a
-								href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D. in Computer Science from <a
+								href="http://matter-labs.io">Matter Labs</a> (<a href="https://www.zksync.io">ZKsync</a>). I hold a Ph.D. in Computer Science from <a
 								href="https://www.mpi-sws.org/">MPI-SWS</a>, completed in collaboration with <a
-								href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>, under the
-							supervision of <a href="https://people.mpi-sws.org/~gummadi/">Prof. Dr. Krishna P.
-								Gummadi</a>. My research focuses on advancing fairness in blockchain technology and
+								href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>. My research focuses on advancing fairness in blockchain technology and
 							Decentralized Finance (DeFi).
 
 							In 2022, I undertook a 6-month research internship at <a
