--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
 							In 2022, I undertook a 6-month research internship at <a
 								href="https://chainlinklabs.com">Chainlink Labs</a>. I earned my Master’s degree in
 							Computer Science from the <a href="https://ufmg.br">Universidade Federal de Minas Gerais
-								(UFMG)</a>, Brazil, in 2017, advised by <a
-								href="https://homepages.dcc.ufmg.br/~fabricio/">Prof. Dr. Fabrício Benevenuto</a>.
+								(UFMG)</a>, Brazil, in 2017.
 							During my MSc, I held two research internships at MPI-SWS in Saarbrücken, Germany. I
 							completed my B.Sc. in Computer Science at the <a href="https://ufop.br">Universidade Federal
 								de Ouro Preto (UFOP)</a> in 2015 and participated in an exchange program at <a
