Added SMC25 paper

--- a/index.html
+++ b/index.html
@@ -231,9 +231,11 @@
 						<p class="mb-0">
 							I am a Research Scientist at the <a href="https://www.mpi-sws.org/">Max Planck Institute for
 								Software Systems (MPI-SWS)</a> and a former Research Scientist at <a
-								href="http://matter-labs.io">Matter Labs</a> (<a href="https://www.zksync.io">ZKsync</a>). I hold a Ph.D. in Computer Science from <a
+								href="http://matter-labs.io">Matter Labs</a> (<a
+								href="https://www.zksync.io">ZKsync</a>). I hold a Ph.D. in Computer Science from <a
 								href="https://www.mpi-sws.org/">MPI-SWS</a>, completed in collaboration with <a
-								href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>. My research focuses on advancing fairness in blockchain technology and
+								href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>. My research
+							focuses on advancing fairness in blockchain technology and
 							Decentralized Finance (DeFi).
 
 							In 2022, I undertook a 6-month research internship at <a
@@ -466,6 +468,61 @@
 										</ul>
 
 
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Unrolling the Performance of ZK-Rollups through Stochastic Modeling
+												</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["carlos_melo", "johnnatan_messias", "jose_miqueias", "glauber_goncalves", "francisco_airton_silva", "andre_soares"]))</script>
+
+											</li>
+											<li>In Proceedings of the IEEE International Conference on Systems, Man, and
+												Cybernetics (SMC). Vienna, Austria. October 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#paper-zkmetrics"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="pdf/papers/carlos_melo_blockchain_smc_2025.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+
+											<div id="paper-zkmetrics" class="collapse">
+												<p class="font-italic"><b>Abstract:</b>
+													Sidechains offer partial solutions to Ethereum's scalability
+													challenges; however, they introduce trade-offs related to security
+													and implementation complexity. These limitations have been further
+													addressed by Layer-2 solutions known as rollups, which combine
+													off-chain computation with on-chain verification, preserving both
+													security and decentralization on the Ethereum platform. This paper
+													proposes a Stochastic Petri Net model to evaluate the feasibility of
+													ZK-Rollups by analyzing their impact on throughput and latency. The
+													results indicate that increased adoption of Layer-2 transactions can
+													enhance system throughput by up to 20%. Conversely, latency may rise
+													by more than 100% when larger batches are used, revealing a
+													fundamental performance trade-off.
+
+												</p>
+											</div>
+										</ul>
+
+
+
+
+
+
+
+
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -522,6 +579,7 @@
 												</p>
 											</div>
 										</ul>
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
