--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 			"robin_fritsch": ["Robin Fritsch", "https://disco.ethz.ch/members/rfritsch"],
 			"malte_schlosser": ["Malte Schlosser", "#"],
 			"benjamin_kraner": ["Benjamin Kraner", "https://www.ifi.uzh.ch/en/bdlt/Team/PhD-Students/Benjamin-Kraner.html"],
-			"carlos_melo": ["Carlos Alexandre Silva de Melo", "https://casm3.github.io"],
+			"carlos_melo": ["Carlos Melo", "https://casm3.github.io"],
 			"jose_miqueias": ["José Miqueias", "#"],
 			"glauber_goncalves": ["Glauber Dias Gonçalves", "https://sites.google.com/a/ufpi.edu.br/ggoncalves"],
 			"francisco_airton_silva": ["Francisco Airton Silva", "https://scholar.google.com/citations?user=JhN6a-wAAAAJ"],
-			"andre_soares": ["André C. B. Soares", "#"],
+			"andre_soares": ["André Soares", "#"],
 			"christof_ferreira_torres": ["Christof Ferreira Torres", "https://www.christoftorres.com"],
 		};
 		function parse_author_to_html(author) {
