--- a/index.html
+++ b/index.html
@@ -493,6 +493,10 @@
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a href="pdf/slides/SMC25-SPN.pdf"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
 											</ul>
 
 											<div id="paper-zkmetrics" class="collapse">
