Added delegation fairness paper

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 			"francisco_airton_silva": ["Francisco Airton Silva", "https://scholar.google.com/citations?user=JhN6a-wAAAAJ"],
 			"andre_soares": ["André Soares", "#"],
 			"christof_ferreira_torres": ["Christof Ferreira Torres", "https://www.christoftorres.com"],
+			"ayae_ide": ["Ayae Ide", "https://ayaeide.github.io"],
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -352,6 +353,69 @@
 											</div>
 										</ul>
 
+
+
+
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Fairness in Token Delegation: Mitigating Voting Power Concentration
+													in DAOs</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "ayae_ide"]))</script>
+
+											</li>
+											<li>Pre print. 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-delegation-interest"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="https://arxiv.org/pdf/2510.05830"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=evfTos8WXDY"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+												<li class="list-inline-item"><a
+														href="pdf/slides/tum-fair-governance.pdf" target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
+
+											</ul>
+
+											<div id="arxiv-delegation-interest" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Decentralized Autonomous
+													Organizations (DAOs) aim to enable participatory governance, but in
+													practice face challenges of voter apathy, concentration of voting
+													power, and misaligned delegation. Existing delegation mechanisms
+													often reinforce visibility biases, where a small set of highly
+													ranked delegates accumulate disproportionate influence regardless of
+													their alignment with the broader community. In this paper, we
+													conduct an empirical study of delegation in DAO governance,
+													combining on-chain data from five major protocols with off-chain
+													discussions from 14 DAO forums. We develop a methodology to link
+													forum participants to on-chain addresses, extract governance
+													interests using large language models, and compare these interests
+													against delegates' historical behavior. Our analysis reveals that
+													delegations are frequently misaligned with token holders' expressed
+													priorities and that current ranking-based interfaces exacerbate
+													power concentration. We argue that incorporating interest alignment
+													into delegation processes could mitigate these imbalances and
+													improve the representativeness of DAO decision-making.
+
+												</p>
+											</div>
+										</ul>
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -518,15 +582,6 @@
 											</div>
 										</ul>
 
-
-
-
-
-
-
-
-
-
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -538,7 +593,7 @@
 
 											</li>
 											<li>In Proceedings of the 4th International Workshop on Cryptoasset
-												Analytics (CAAW). 2025.</li>
+												Analytics (CAAW). Miyakojima, Japan. April 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#arxiv-inscriptions"
@@ -594,7 +649,7 @@
 
 											</li>
 											<li>In Proceedings of the 4th International Workshop on Cryptoasset
-												Analytics (CAAW). 2025.</li>
+												Analytics (CAAW). Miyakojima, Japan. April 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#arxiv-zksync-data"
