--- a/index.html
+++ b/index.html
@@ -2856,10 +2856,15 @@
 								Interviews
 							</h2>
 							<ul>
+								<li>[2025] - <a href="https://conference.tum-blockchain.com">Unrolling the Performance
+										of ZK-Rollups through Stochastic Modeling</a>. IEEE SMC25.
+									Vienna, Austria.
+								</li>
 								<li>[2025] - <a href="https://conference.tum-blockchain.com">Airdrops:
 										Giving Money Away Is Harder Than It Seems</a>. TUM Blockchain Conference.
 									Munich, Germany.
 								</li>
+
 								<li>[2025] - <a href="https://www.youtube.com/watch?v=evfTos8WXDY">Fairness in Token
 										Delegation: Mitigating Voting Power Concentration in Decentralized
 										Autonomous Organizations</a>. <a
