--- a/index.html
+++ b/index.html
@@ -2856,7 +2856,7 @@
 								Interviews
 							</h2>
 							<ul>
-								<li>[2025] - <a href="https://conference.tum-blockchain.com">Unrolling the Performance
+								<li>[2025] - <a href="https://www.ieeesmc2025.org">Unrolling the Performance
 										of ZK-Rollups through Stochastic Modeling</a>. IEEE SMC25.
 									Vienna, Austria.
 								</li>
