--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
 
 							<br><br>
 
-							I'm delighted to have contributed as a Program Committee member for
+							I'm delighted to have contributed as a Program Committee member for several leading
+							conferences, including
 							<a href="https://fc26.ifca.ai/cfp.html">FC26</a>,
 							<a href="https://aftconf.github.io/aft25/committees.html">AFT25</a>,
 							<a href="https://fc25.ifca.ai/cfp.html">FC25</a>,
@@ -269,6 +270,10 @@
 							<a href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and
 							<a
 								href="https://www2024.thewebconf.org/organization/reviewers-of-research-tracks">WWW24</a>.
+							I am also honored to serve as a Guest Editor for the <a
+								href="https://dl.acm.org/pb-assets/static_journal_pages/tweb/pdf/ACM-TWEB-SI-Advanced-Technologies-Decentralized-Web-1736886950160.pdf">ACM
+								Transactions on the Web (TWEB) Special Issue on Advanced Technologies in the
+								Decentralized Web</a>.
 
 
 							<br><br>
