--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 							conferences, including
 							<a href="https://fc26.ifca.ai/cfp.html">FC26</a>,
 							<a
-								href="https://www2026.thewebconf.org/organization/reviewers-of-research-tracks">WWW26</a>.
+								href="https://www2026.thewebconf.org/organization/reviewers-of-research-tracks">WWW26</a>,
 							<a href="https://aftconf.github.io/aft25/committees.html">AFT25</a>,
 							<a href="https://fc25.ifca.ai/cfp.html">FC25</a>,
 							<a href="https://caaw.io/2025">CAAW25</a>,
