Fixed some issues, typos, added more info and added TLDR talk

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 			"andre_soares": ["André Soares", "#"],
 			"christof_ferreira_torres": ["Christof Ferreira Torres", "https://www.christoftorres.com"],
 			"ayae_ide": ["Ayae Ide", "https://ayaeide.github.io"],
+			"abhisek_dash": ["Abhisek Dash", "https://sites.google.com/site/abhisek0193"]
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -588,6 +589,40 @@
 												</p>
 											</div>
 										</ul>
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													On The Governance of Decentralized Autonomous Organizations”
+												</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["vabuk_pahari", "balakrishnan_chandrasekaran", "abhisek_dash", "krishna_gummadi", "johnnatan_messias"]))</script>
+
+											</li>
+											<li>In The Latest in DeFi Research (TLDR). May 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=K8XcGork4qg"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+												<li class="list-inline-item"><a href="pdf/slides/pahari-tldr20251.pdf"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
+											</ul>
+
+											<div id="presentation-dao-tldr" class="collapse">
+												<p class="font-italic"><b>Abstract:</b>
+
+
+												</p>
+											</div>
+										</ul>
+
 
 										<ul class="list-inline">
 											<li>
@@ -2798,15 +2833,24 @@
 								Awards
 							</h2>
 							<ul>
-
+								<li>[2026] - Selected participant to attend the <a
+										href="https://www.initc3.org/events/2026-01-05-ic3-winter-retreat-2026">IC3
+										Winter Retreat 2026</a> in Engelberg, Switzerland.
+								</li>
 								<li>[2025] - I have been invited, on behalf of the Alexander von Humboldt Foundation, to
 									represent Germany at the <a
 										href="https://www.humboldt-foundation.de/vernetzen/brazilian-german-frontiers-of-science-and-technology-symposium-3">Brazilian-German
-										BRAGFOST Symposium</a>.</li>
+										Brazilian-German Frontiers of Science and Technology (BRAGFOST) Symposium</a>.
+								</li>
+								<li>[2025] - Selected participant to attend the <a
+										href="https://www.initc3.org/events/2025-01-05-ic3-winter-retreat-2025">IC3
+										Winter Retreat 2025</a> in Engelberg, Switzerland.
+								</li>
 								<li>[2024] - I have been invited, on behalf of the President of the Alexander von
 									Humboldt Foundation, to represent Germany at the <a
 										href="https://www.humboldt-foundation.de/en/connect/13-indo-german-frontiers-of-engineering-symposium">Indo-German
-										INDOGFOE Symposium</a>. The event brought together
+										Indo-German Frontiers of Engineering (INDOGFOE) Symposium</a>. The event brought
+									together
 									outstanding Indian and German scientists.</li>
 								<li>[2024] - The paper <a href="pdf/papers/gogol-liquid-staking-marble24.pdf">Liquid
 										Staking
@@ -2817,6 +2861,10 @@
 								</li>
 								<li>[2024] - Successfully completed Ph.D. with <b>Magna Cum Laude</b> distinction,
 									demonstrating exceptional academic excellence and rigorous research capabilities.
+								</li>
+								<li>[2024] - Selected participant to attend the <a
+										href="https://www.initc3.org/events/2024-01-08-ic3-winter-retreat-2024">IC3
+										Winter Retreat 2024</a> in Les Diablerets, Switzerland.
 								</li>
 								<li>[2023] - My seminar on Blockchains and Decentralized Finance (DeFi) has been
 									nominated for
