--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													On The Governance of Decentralized Autonomous Organizations”
+													On The Governance of Decentralized Autonomous Organizations
 												</h6>
 											</li>
 											<li>
