Added ZK Journal paper

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 			"andre_soares": ["André Soares", "#"],
 			"christof_ferreira_torres": ["Christof Ferreira Torres", "https://www.christoftorres.com"],
 			"ayae_ide": ["Ayae Ide", "https://ayaeide.github.io"],
-			"abhisek_dash": ["Abhisek Dash", "https://sites.google.com/site/abhisek0193"]
+			"abhisek_dash": ["Abhisek Dash", "https://sites.google.com/site/abhisek0193"],
+			"jean_araujo": ["Jean Araujo", "#"]
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -305,6 +306,56 @@
 
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													A Stochastic Performance Model for Evaluating Ethereum Layer-2
+													Rollups</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["carlos_melo", "jose_miqueias", "johnnatan_messias", "glauber_goncalves", "francisco_airton_silva", "andre_soares", "jean_araujo"]))</script>
+
+											</li>
+											<li>Future Generation Computer Systems. Elsevier. 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#fgcs25-zk"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="#" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+
+											</ul>
+
+											<div id="fgcs25-zk" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Although Ethereum’s transition
+													to Proof-of-Stake and the emergence of sidechains offer
+													partial improvements on scalability, these approaches still present
+													performance-related trade-offs. To address these challenges,
+													ZK-Rollups have emerged as Layer-2 scalability solutions. They
+													combine off-chain computation with on-chain verification, improving
+													scalability while preserving the underlying security guarantees of
+													Ethereum. This paper proposes the use of Stochastic Petri Nets to
+													assess the feasibility of ZK-Rollups, considering the impact of
+													these solutions on throughput, latency, and the cost-benefit
+													relationship, including the average transaction cost and its
+													relationship to performance metrics. The results show that increased
+													adoption of transactions in Layer-2 can increase system throughput
+													by up to 20%, rising from 85 tps in an environment
+													without Layer-2 to 105 tps when 90% of transactions follow this
+													path. On the other hand, latency can increase by more than 100% when
+													larger batches are used in Layer-2, highlighting a trade-off. While
+													batching improves throughput by reducing per-transaction overhead,
+													it also delays the finalization of individual transactions.
+
+												</p>
+											</div>
+										</ul>
+
 
 
 										<ul class="list-inline">
