Added CAAW26 paper on cross-rollup MEV

--- a/index.html
+++ b/index.html
@@ -308,6 +308,55 @@
 										<!--//resume-timeline-item-header-->
 
 
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Cross-Rollup MEV: Non-Atomic Arbitrage on Layer-2 Blockchains</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["krzysztof_gogol", "johnnatan_messias", "deborah_miori", "claudio_tessone", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>In Proceedings of the 4th International Workshop on Cryptoasset
+												Analytics (CAAW). St. Kitts. March 2026.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-l2-arbitrage"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="https://arxiv.org/pdf/2406.02172"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+
+											<div id="arxiv-l2-arbitrage" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Non-atomic arbitrage is the
+													largest source of MEV on Ethereum but it remains unexplored on
+													rollups, Layer-2 (L2) blockchains. This study quantifies the
+													non-atomic arbitrage opportunities across decentralized exchanges
+													(DEXs) on major rollups, as well as between rollup DEXs and
+													centralized exchanges (CEXs). By measuring execution costs, swap
+													paths, and cross-venue price discrepancies, we identify more than
+													500,000 previously untapped arbitrage opportunities across Arbitrum,
+													Base, Optimism, and ZKsync. These opportunities correspond to
+													0.03–0.05% of trading volume on Arbitrum, Base, and Optimism, and
+													approximately 0.25% on ZKsync. Because many price deviations persist
+													for 10–20 blocks, we introduce an adjusted Loss-Versus-Rebalancing
+													(LVR) metric to prevent double-counting in the presence of
+													multi-block arbitrage windows.
+													Our findings demonstrate that non-atomic arbitrage on rollups is
+													economically meaningful and structurally distinct from L1 Ethereum,
+													calling for new MEV extraction strategies.
+
+												</p>
+											</div>
+										</ul>
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -887,51 +936,6 @@
 
 
 
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Layer-2 Arbitrage: An Empirical Analysis of Swap Dynamics and Price
-													Disparities on Rollups</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["krzysztof_gogol", "johnnatan_messias", "deborah_miori", "claudio_tessone", "benjamin_livshits"]))</script>
-
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-l2-arbitrage"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a href="https://arxiv.org/pdf/2406.02172"
-														target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-											</ul>
-
-											<div id="arxiv-l2-arbitrage" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> This paper explores the dynamics
-													of Decentralized Finance (DeFi) within the Layer-2 ecosystem,
-													focusing on Automated Market Makers (AMM) and arbitrage on Ethereum
-													rollups. We observe significant shifts in trading activity from
-													Ethereum to rollups, with swaps on rollups happening 2-3 times more
-													often, though, with lower trade volume. By examining the price
-													differences between AMMs and centralized exchanges, we discover over
-													0.5 million unexploited arbitrage opportunities on rollups.
-													Remarkably, we observe that these opportunities last, on average, 10
-													to 20 blocks, requiring adjustments to the LVR metrics to avoid
-													double-counting arbitrage. Our results show that arbitrage in
-													Arbitrum, Base, and Optimism pools ranges from 0.03% to 0.05% of
-													trading volume, while in zkSync Era it oscillates around 0.25%, with
-													the LVR metric overestimating arbitrage by a factor of five. Rollups
-													offer not only lower gas fees, but also provide faster block
-													production, leading to significant differences compared to the
-													trading and arbitrage dynamics of Ethereum.
-
-												</p>
-											</div>
-										</ul>
 
 
 
