--- a/index.html
+++ b/index.html
@@ -2960,6 +2960,31 @@
 							</ul>
 						</section>
 
+						<section class="resume-section experience-section mb-5" id="lectures">
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Teaching
+								Lectures
+							</h2>
+							<ul>
+								<li>[2026] - <a href="./slides/lecture-daos-RPTU.pdf">Decentralized Autonomous
+										Organizations (DAOs)</a>.
+									Rheinland-Pfälzische Technische Universität Kaiserslautern-Landau (RPTU), Germany.
+									January 14th, 2026.
+								</li>
+								<li>[2025] - <a href="./slides/lecture-daos-UFPI.pdf">Decentralized Governance</a>.
+									Universidade Federal do Piauí (UFPI), Brazil. October 16th, 2025.
+								</li>
+								<li>[2023] - <a href="https://blockchain.mpi-sws.org/courses/seminar-ss2023">Seminar on
+										Blockchains and Decentralized Finance (DeFi)</a>.
+									Universität des Saarlandes (UdS), Germany. Summer Semester 2023.
+								</li>
+
+
+							</ul>
+
+						</section>
+
+
+
 
 						<section class="resume-section experience-section mb-5" id="talks">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks and
