--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 						<a class="nav-link" href="#talks">Talks</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="#teaching">Teaching</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="pdf/resume_eng_johnnatan_messias.pdf" target="_blank">CV</a>
 					</li>
 					<li class="nav-item">
@@ -2960,9 +2963,9 @@
 							</ul>
 						</section>
 
-						<section class="resume-section experience-section mb-5" id="lectures">
+						<section class="resume-section experience-section mb-5" id="teaching">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Teaching
-								Lectures
+								Activities
 							</h2>
 							<ul>
 								<li>[2026] - <a href="./slides/lecture-daos-RPTU.pdf">Decentralized Autonomous
