Added new paper

--- a/index.html
+++ b/index.html
@@ -694,6 +694,71 @@
 										</ul>
 
 
+
+
+
+
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													A Stochastic Petri Net Approach for Evaluating Resource Utilization
+													and Costs in Cloud-Hosted ZK-Rollups
+												</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["carlos_melo", "glauber_goncalves", "francisco_airton_silva", "andre_soares", "jose_miqueias", "johnnatan_messias", "jean_araujo"]))</script>
+
+											</li>
+											<li>In Proceedings of the IEEE International Systems Conference (SysCon).
+												Halifax, Canada. April 2026.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#paper-zkmetrics-syscon"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+
+											</ul>
+
+											<div id="paper-zkmetrics-syscon" class="collapse">
+												<p class="font-italic"><b>Abstract:</b>
+													Leading blockchain platforms like Ethereum face significant
+													scalability challenges while striving to balance high transaction
+													throughput, security, and decentralization. Layer-2 solutions,
+													especially Zero-Knowledge (ZK) Rollups, tackle this issue by
+													processing transactions off-chain and submitting concise validity
+													proofs to the main network. This approach preserves security while
+													improving throughput. Despite these technical advantages, optimizing
+													the underlying infrastructure remains a complex task for node
+													operators. This paper presents a formal modeling approach using
+													Stochastic Petri Nets (SPNs) to assess the operational behavior of
+													ZK-Rollups, particularly addressing deployment challenges in public
+													cloud environments. The proposed model is calibrated using empirical
+													parameters from the zkSync Era protocol to ensure realistic
+													performance representation. Using a Design of Experiments (DoE)
+													methodology, we analyze key infrastructure metrics systematically,
+													including resource utilization, transaction wait times, and daily
+													operational costs under various system configurations. Case studies
+													demonstrate that increasing Layer-2 transaction volume can reduce
+													service providers' daily operational costs by up to 25% through more
+													efficient batch usage. However, results indicate a significant
+													trade- off between cost efficiency and responsiveness, as larger
+													batch sizes may double user waiting times. Additionally, we analyze
+													the relationship between server utilization and capacity,
+													demonstrating that typical deployments are frequently
+													overprovisioned and compromise system stability.
+
+												</p>
+											</div>
+										</ul>
+
+
+
+
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
